# chess

./: CMakeLists.txt
include/core/: FEN.hpp  board.hpp  piece.hpp  pieceFactory.hpp
include/core/pieces/: pawn.hpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  FEN.cpp  board.cpp  piece.cpp  pieceFactory.cpp
src/core/pieces/: CMakeLists.txt  pawn.cpp
